syntax="proto3";

package hello;

option go_package = "/hello";

import "example/proto/annotations.proto";

message HelloRequest {
  string msg = 1;
}

message HelloResponse {
  string msg = 1;
}

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/hello"
      body: "*"
    };
  }
}